[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-memory-lab"
version = "0.1.0"
description = "LangGraph memory lab with multi-backend memory routing, context management, and benchmarking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chromadb>=1.5.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.4.0",
  "pydantic-settings>=2.5.0",
  "redis>=5.0.0",
  "tiktoken>=0.7.0",
]

[project.scripts]
memory-lab = "memory_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
